# engine

./: .dockerignore  .env  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  MIGRATION_PLAN.md  Makefile.toml  README.md  RENSCRIPT.md  THEMES.md  babylon_coverage_report.json  build.rs  claude.md  debug_merged_Bounce.txt  debug_merged_CameraTracking.txt  debug_merged_CarController.txt  dev  dev.cmd  docker-compose.yml  index.html  index.php  package-lock.json  package.json  releases.json  renzora_lumen_plan.md  roadmap.md  rspack.config.js  runtime.rspack.config.js  rust-toolchain.toml  server.js  setup-https.bat  setup-https.ps1  tailwind.config.js  verify_babylon_coverage.js  (+1 more)
bridge/: Cargo.toml  update_config.json
bridge/src/: main.rs
bridge/src/modules/: database.rs  embedded_redis.rs  errors.rs  file_sync.rs  file_watcher.rs  handlers.rs  memory_cache.rs  mod.rs  model_converter.rs  model_processor.rs  project_cache_validator.rs  project_manager.rs  redis_cache.rs  renscript_cache.rs  renscript_compiler.rs  renscript_mappings.rs  system_monitor.rs  thumbnail_generator.rs  types.rs  update_manager.rs  websocket_server.rs
crates/abi_hash/: Cargo.toml
crates/abi_hash/src/: lib.rs  main.rs
crates/avian/: Cargo.toml  README.md
crates/avian/migration-guides/: 0.5-to-0.6.md  0.6-to-main.md
crates/avian/src/: ancestor_marker.rs  interpolation.rs  lib.rs
crates/bevy_firefly/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
crates/bevy_firefly/src/: app.rs  buffers.rs  change.rs  data.rs  extract.rs  lib.rs  lights.rs  nodes.rs  occluders.rs  phases.rs  pipelines.rs  prepare.rs  sprites.rs  utils.rs  visibility.rs
crates/bevy_gaussian_splatting/: Cargo.toml
crates/bevy_hanabi/: .cargo_vcs_info.json  Cargo.toml
crates/bevy_hanabi/src/: attributes.rs  plugin.rs
crates/bevy_hui/: Cargo.toml  README.md
crates/bevy_hui/src/: adaptor.rs  animation.rs  auto.rs  bindings.rs  build.rs  compile.rs  data.rs  error.rs  lib.rs  load.rs  parse.rs  styles.rs
crates/bevy_mod_outline/: Cargo.toml
crates/bevy_mod_outline/src/: computed.rs  generate.rs  lib.rs  msaa.rs  node.rs  pipeline.rs  pipeline_key.rs  queue.rs  render.rs  scene.rs  uniforms.rs  view_uniforms.rs
crates/bevy_oxr/: Cargo.toml
crates/bevy_procedural_tree/: Cargo.toml  LICENSE_MIT  README.md
crates/bevy_procedural_tree/src/: enums.rs  errors.rs  lib.rs  meshgen.rs  settings.rs
crates/bevy_procedural_tree/textures/: SOURCE.txt
crates/bevy_silk/: CHANGELOG.md  Cargo.toml  README.md
crates/bevy_silk/examples/: anchors_example.rs  avian_collision_example.rs  balloon_example.rs  camera_plugin.rs  flag_example.rs  moving_example.rs  rapier_collision_example.rs
crates/bevy_silk/src/: config.rs  lib.rs  mesh.rs  vertex_anchor.rs
crates/bevy_solari/: Cargo.toml
crates/editor_plugin_api/: Cargo.toml
crates/editor_plugin_api/src/: api.rs  events.rs  ffi.rs  lib.rs  prelude.rs  traits.rs  ui.rs
crates/glam_matrix_extras/: Cargo.toml  README.md
crates/glam_matrix_extras/src/: lib.rs  mat_ext.rs  ops.rs
crates/mcp_server_plugin/: Cargo.toml
crates/mcp_server_plugin/src/: lib.rs
crates/renzora/: Cargo.toml  build.rs
crates/renzora/src/: gi.rs  lang.rs  lib.rs  plugin_meta.rs  postprocess.rs  postprocess_copy.wgsl  runtime_warnings.rs  sdk.rs  world_environment.rs
crates/renzora_ai_chat/: Cargo.toml
crates/renzora_ai_chat/src/: lib.rs
crates/renzora_animation/: Cargo.toml
crates/renzora_animation/src/: bridge.rs  clip.rs  component.rs  discovery.rs  extract.rs  graph_builder.rs  inspector.rs  layers.rs  lib.rs  loader.rs  property_playback.rs  read_state.rs  script_extension.rs  sm_loader.rs  state_machine.rs  systems.rs  tween.rs
crates/renzora_animation_editor/: Cargo.toml
crates/renzora_animation_editor/src/: animation_panel.rs  inspector.rs  lib.rs  native_animation.rs  native_inspector.rs  native_params.rs  native_state_machine.rs  native_studio_preview.rs  native_timeline.rs  params_panel.rs  preview.rs  setup.rs  state_machine_panel.rs  studio_preview.rs  studio_preview_panel.rs  timeline_panel.rs
crates/renzora_antialiasing/: Cargo.toml
crates/renzora_antialiasing/editor/: Cargo.toml
crates/renzora_antialiasing/src/: lib.rs
crates/renzora_asset_browser/: Cargo.toml
crates/renzora_asset_browser/src/: grid.rs  lib.rs  list.rs  model_thumbnails.rs  native.rs  state.rs  thumbnails.rs  toolbar.rs  tree.rs
crates/renzora_atmosphere/: Cargo.toml
crates/renzora_atmosphere/editor/: Cargo.toml
crates/renzora_atmosphere/src/: lib.rs
crates/renzora_audio/: Cargo.toml
crates/renzora_audio/src/: asset_loader.rs  autoplay.rs  (+12 more)
crates/renzora_auto_exposure/: Cargo.toml
crates/renzora_autosave/: Cargo.toml
runtime-tauri/: Cargo.toml  tauri.conf.json
runtime-tauri/src/: main.rs
server/: Cargo.toml  DEPLOYMENT.md  build-release.bat  bun.lockb  database.js  database.ts  package-lock.json  package.json  redis.ts  renzora.example.toml  renzora.toml  server.js  server.ts  start-server.bat  start-server.sh  tailwind.config.js  webpack.config.js  websocket.js  websocket.ts
server/live/: chat.ts
server/middleware/: auth.js  auth.ts
server/models/: AccessCode.ts  Inventory.ts  Note.js  Note.ts  Pack.ts  PackOpening.ts  Permissions.ts  Scene.js  Scenes.js  Scenes.ts  Servers.js  Servers.ts  StoreCategory.ts  StoreItem.ts  User.js  User.ts  Voucher.ts  index.js
server/routes/: access.ts  ajax.js  ajax.ts  auth.js  auth.ts  editor.js  editor.ts  market.ts  permissions.ts  plugin.js  plugins.ts  projects.js  scenes.js  scenes.ts  servers.js  servers.ts  staff.ts  terminal.ts  tileset_manager.js  tileset_manager.ts
server/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: babylon_native.rs  babylon_native_bridge.cpp  babylon_native_bridge.hpp  babylon_native_bridge.rs  babylon_native_simple.cpp  babylon_native_simple.hpp  babylon_native_simple.rs  lib.rs  main.rs  native_renderer.rs  shaders.rs  vulkan_renderer.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+5292 files in other folders)
