[workspace]
resolver = "2"
# Glob auto-includes every crate under `crates/` so adding a new plugin
# only requires creating its directory — no manual workspace.members
# update. `cargo check -p renzora_<name>` works from the root, and
# `[workspace.lints]` / `[workspace.dependencies]` propagate cleanly.
members = [
    ".",
    # Engine crate + every plugin (`renzora` + `renzora_*`).
    "crates/renzora",
    "crates/renzora_*",
    # Non-plugin engine support crate.
    "crates/dynamic_plugin_loader",
    # Vendored Bevy ecosystem crates. Listed explicitly (not via a
    # `bevy_*` glob) so we don't accidentally pick up `bevy_oxr`, which
    # is its own vendored workspace.
    "crates/bevy_gauge",
    "crates/bevy_hanabi",
    "crates/bevy_mod_outline",
    "crates/bevy_silk",
    "crates/vleue_navigator",
]
# Crates parked under `disabled/` are intentionally outside the `crates/*`
# glob so they don't enter the workspace. `disabled/renzora_vr_editor`
# references items in `renzora_xr` that no longer exist
# (`VrControllerState`, `VrHand`, `reexports::*`); resurrect it once the
# renzora_xr API has stabilised, then move it back under `crates/`.

[workspace.lints.rust]
# `renzora::add!` uses `#[cfg(feature = "dlopen")]` to gate FFI exports.
# The cfg is evaluated in the calling crate's context, so plugin crates
# without a `dlopen` feature get warnings on every macro invocation.
# Tell the compiler this is an expected-but-unset feature.
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("dlopen"))'] }

[workspace.dependencies]
# `dynamic_linking` is intentionally NOT in workspace defaults — it pulls
# in `bevy_dylib` (dylib-only), which can't link into iOS staticlib or
# Android cdylib builds. The desktop binary (`renzora_app`) opts in via
# its own `[dependencies]` entry; cargo's feature unification under
# `--workspace` propagates it to plugin crates so they end up with the
# same bevy compilation as the host (and the same `bevy::World` TypeId,
# which `plugin_bevy_hash()` checks at dlopen time). Mobile/wasm builds
# under `cargo build -p <mobile_crate>` only see their own dep tree
# (resolver = "2") and stay clean of dynamic_linking.
bevy = { version = "0.18", features = ["bluenoise_texture", "experimental_pbr_pcss", "jpeg"] }
# Shared external deps. Plugins opt in by name (`bevy_egui = { workspace = true }`)
# so versions stay locked across the workspace.
bevy_egui = "0.39"
# Pin egui to the version bevy_egui 0.39 ships with. Any third-party crate that
# imports `egui::*` directly (e.g. `egui_code_editor`) must consume this same
# version, otherwise their `egui::Ui` and bevy_egui's `egui::Ui` are different
# types and won't unify at the call boundary.
egui = "0.33"
egui-phosphor = { version = "0.11", features = ["regular"] }
egui_code_editor = "0.2"
log = "0.4"

[package]
name = "renzora_app"
version = "0.2.0"
edition = "2021"
default-run = "renzora"

[[bin]]
name = "renzora"
path = "src/main.rs"

[features]
default = ["editor"]
editor = [
    "dep:renzora_runtime",
    "renzora_runtime/lua",
    "renzora_runtime/editor",
]
# The runtime binary is also the dedicated server: launch it with `--server`
# to boot headless. No separate `server` feature/binary exists.
runtime = ["dep:renzora_runtime", "renzora_runtime/lua"]
wasm = [
    "runtime",
    "bevy/webgpu",
    "bevy/bevy_asset",
    "bevy/bevy_window",
    "bevy/bevy_winit",
    "bevy/bevy_state",
    "bevy/bevy_log",
    "bevy/bevy_input_focus",
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_scene",
    "bevy/bevy_ui",
    "bevy/bevy_ui_render",
    "bevy/bevy_text",
    "bevy/bevy_picking",
    "bevy/jpeg",
    "bevy/multi_threaded",
    "bevy/async_executor",
]

[dependencies]
# Desktop binary opts into `dynamic_linking` here. Feature unification
# under `--workspace` propagates this to every plugin crate's bevy dep
# so they share one `bevy_dylib` instance and matching TypeIds. Mobile
# builds (`-p renzora-ios` / `-p renzora-android`) don't see this dep
# and compile bevy without dynamic_linking — bevy_dylib stays out of
# their staticlib/cdylib link.
bevy = { workspace = true, features = ["dynamic_linking"] }

# Single shared library — `editor` feature on this crate adds editor extras.
renzora_runtime = { path = "crates/renzora_runtime", optional = true }
uuid = "1"

# Misc
dynamic_plugin_loader = { path = "crates/dynamic_plugin_loader" }
toml = "0.8"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# WASM support: getrandom needs JS backend on wasm32 targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.108"

[build-dependencies]
winres = "0.1"

[profile.dist]
inherits = "release"
opt-level = 2
strip = "symbols"


[lints]
workspace = true
