[workspace]
resolver = "2"
# Glob auto-includes every crate under `crates/` so adding a new plugin
# only requires creating its directory — no manual workspace.members
# update. `cargo check -p renzora_<name>` works from the root, and
# `[workspace.lints]` / `[workspace.dependencies]` propagate cleanly.
members = [
    ".",
    # Engine crate + every plugin (`renzora` + `renzora_*`).
    "crates/renzora",
    "crates/renzora_*",
    # Nested editor halves of split dual-mode crates (e.g.
    # `crates/renzora_engine/editor` = `renzora_engine_editor`). The lean
    # runtime crate sits at `crates/renzora_<name>/`; its editor-only code lives
    # in the nested `editor/` subcrate, linked only by the editor bundle. A
    # member glob that matches nothing is a hard error, so this stays valid only
    # while ≥1 `editor/` subcrate exists.
    "crates/renzora_*/editor",
    # Non-plugin engine support crate.
    "crates/dynamic_plugin_loader",
    # Native build helper (`cargo renzora`). Listed explicitly — it lives at the
    # repo root, not under `crates/`, so no glob covers it. Excluded from the
    # workspace `--workspace` engine build (it pulls no bevy and isn't shipped).
    "xtask",
    # Vendored Bevy ecosystem crates. Listed explicitly (not via a
    # `bevy_*` glob) so we don't accidentally pick up `bevy_oxr`, which
    # is its own vendored workspace.
    "crates/bevy_hanabi",
    "crates/bevy_hui",
    "crates/bevy_mod_outline",
    "crates/bevy_procedural_tree",
    "crates/bevy_silk",
    "crates/vleue_navigator",
    # vleue_navigator's pathfinding deps, vendored to bump their glam 0.30 → 0.32
    # (bevy 0.19's glam). Upstream polyanya 0.16.1 is the latest and still pins
    # glam 0.30, which would otherwise clash with bevy's glam (two `Vec2` types).
    "crates/polyanya",
    "crates/bvh2d",
    # Avian physics closure. `avian/` is its own nested workspace (like
    # `bevy_oxr`), referenced by path; these three are its ecosystem deps,
    # already ported to Bevy 0.19 upstream, kept as members so they share the
    # one workspace Bevy via `workspace = true`.
    "crates/bevy_heavy",
    "crates/bevy_transform_interpolation",
    "crates/glam_matrix_extras",
]
# `crates/avian` is a vendored NESTED workspace — its avian2d/avian3d crates use
# `workspace = true` against avian's OWN [workspace.dependencies]. Exclude it so
# cargo doesn't absorb those crates into THIS workspace (which would make their
# `workspace = true` resolve here and fail). It's pulled in by path from the
# physics consumers. (bevy_oxr is the same shape but uses explicit versions, so
# it doesn't trip the inheritance lookup.)
exclude = ["crates/avian"]
# Crates parked under `disabled/` are intentionally outside the `crates/*`
# glob so they don't enter the workspace. `disabled/renzora_vr_editor`
# references items in `renzora_xr` that no longer exist
# (`VrControllerState`, `VrHand`, `reexports::*`); resurrect it once the
# renzora_xr API has stabilised, then move it back under `crates/`.

[workspace.lints.rust]
# `renzora::add!` uses `#[cfg(feature = "dlopen")]` to gate FFI exports.
# The cfg is evaluated in the calling crate's context, so plugin crates
# without a `dlopen` feature get warnings on every macro invocation.
# Tell the compiler this is an expected-but-unset feature.
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("dlopen"))'] }

[workspace.dependencies]
# `dynamic_linking` is intentionally NOT in workspace defaults — it pulls
# in `bevy_dylib` (dylib-only), which can't link into iOS staticlib or
# Android cdylib builds. The desktop binary (`renzora_app`) opts in via
# its own `[dependencies]` entry; cargo's feature unification under
# `--workspace` propagates it to plugin crates so they end up with the
# same bevy compilation as the host (and the same `bevy::World` TypeId,
# which `plugin_bevy_hash()` checks at dlopen time). Mobile/wasm builds
# under `cargo build -p <mobile_crate>` only see their own dep tree
# (resolver = "2") and stay clean of dynamic_linking.
# Bevy feature policy — ABI-stability driven (read before touching this list).
# Plugins dlopen against ONE shared `bevy_dylib`; its compiled feature set IS
# the API surface every plugin can reach AND an input to the ABI hash. So we
# enable a deliberately MAXIMAL-but-valid set here, once: "everything a plugin
# could practically want" minus the three things that physically cannot be
# blanket-enabled — (1) mutually-exclusive backends, (2) platform-specific
# features, (3) dev/CI/trace features. Per-target backend choices live in the
# `wasm` feature below and the mobile crates, not here. Widening this set later
# costs an intra-version ABI bump, so we front-load it.
#
# Deliberately OMITTED (each would be an ABI bump to add — do it with eyes open):
#   meshlet, meshlet_processor                    ENABLED below (experimental
#                                                   virtual geometry)
#   (bevy_solari IS enabled below — it backs the renzora_solari plugin.)
#   dlss, force_disable_dlss                      NVIDIA proprietary SDK
#   trace_chrome, detailed_trace, track_location, dev/CI only — OFF (they tax every
#     trace_tracy_memory, bevy_dev_tools,           frame and would skew a profile);
#     bevy_ci_testing, bevy_debug_stepping,         all OFF — `trace_tracy` too
#     bevy_ui_debug, debug, *glam_assert,           (gated via `renzora_tracy`).
#     embedded_watcher, hotpatching, schedule_data
#   zstd_c, reflect_auto_register_static,         superseded by the chosen
#     default_no_std / critical-section / libm / web   std + zstd_rust variants
#   statically-linked-dxc, spirv_shader_passthrough, raw_vulkan_init   per-backend
#   webgl2/webgpu/x11/wayland/android-*/accesskit_unix   per-target (see wasm/mobile)
#
# SOURCE: Bevy 0.19 is published on crates.io. The `bevy` umbrella pulls its
# sub-crates as matching 0.19.x registry deps, so the tree stays internally
# consistent — one Bevy across the dlopen boundary.
bevy = { version = "0.19", default-features = false, features = [
    # Bevy's default is the four meta-features `2d, 3d, ui, audio`. We take
    # `default-features = false` and re-add all but `audio` — Renzora's audio is
    # kira-based (`renzora_audio`), so `bevy_audio` (and its rodio/cpal/symphonia
    # stack) is never used anywhere in the engine. This also establishes the
    # `default-features = false` base needed to drop other default subsystems
    # (e.g. gizmos, and eventually 2d/3d) per export.
    "2d", "3d", "ui",
    # `bevy_light` listed explicitly (redundant while `3d` is on — `3d` already
    # provides it) so it SURVIVES when the lean 2D export drops the `3d` meta:
    # bevy_light does not depend on bevy_pbr, so lights/atmosphere keep working in
    # a 2D build. See `renzora_export::capabilities` render_3d (which strips `3d`
    # + the pbr_* sub-features).
    "bevy_light",
    "serialize",
    # extra engine subsystems
    # (bevy_remote / BRP deliberately omitted — nothing in the editor or the
    # exported game uses the Bevy Remote Protocol, and it was the sole puller of
    # bevy_dev_tools, which would otherwise re-introduce bevy_pbr into a 2D build.)
    "bevy_feathers", "bevy_settings", "sysinfo_plugin",
    "bevy_camera_controller", "free_camera", "pan_camera",
    # reflection extras
    "reflect_functions", "reflect_documentation",
    # all shader languages
    "shader_format_glsl", "shader_format_spirv", "shader_format_wesl",
    # all image formats
    "bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "pnm", "qoi", "tga",
    "tiff", "webp", "zlib", "basis-universal", "compressed_image_saver",
    # (audio formats intentionally dropped — Renzora uses kira, not bevy_audio)
    # PBR / rendering detail
    "pbr_transmission_textures", "pbr_clustered_decals", "pbr_light_textures",
    "pbr_multi_layer_material_textures", "pbr_anisotropy_texture",
    "pbr_specular_textures", "experimental_pbr_pcss",
    "morph", "morph_animation",
    "bluenoise_texture", "dfg_lut", "area_light_luts",
    # Experimental hardware-raytraced lighting — backs the `renzora_solari`
    # distribution plugin (Bevy's `SolariPlugins`). Enabling it recompiles
    # `bevy_dylib` and MOVES the plugin ABI hash (CLAUDE.md §3): every existing
    # distribution plugin must be rebuilt, and the pinned hash must be re-pinned
    # after the next container build.
    "bevy_solari",
    # built-in post-process effect stack (vignette, lens distortion, chromatic aberration)
    "bevy_post_process",
    # clipboard / fonts / ui
    "system_clipboard", "clipboard_image", "system_font_discovery", "ghost_nodes",
    # asset IO / processing
    "asset_processor", "file_watcher", "http", "https", "web_asset_cache",
    # ── Meshlet config (NOT a shipping feature set) ─────────────────────────────
    # NOTE: `trace_tracy` is deliberately NOT enabled. Bevy installs its Tracy
    # tracing layer inside `LogPlugin` at boot whenever that feature is compiled
    # in, with no runtime off-switch — so it would arm Tracy on every launch and
    # grow RAM until a profiler connects, regardless of any in-app toggle. Tracy
    # is instead opt-in via the gated `renzora_tracy` plugin (frame marks +
    # diagnostic plots, started only on its toggle). Per-system CPU zones need a
    # dedicated profiling build that re-adds `trace_tracy` — which MOVES the ABI
    # hash (CLAUDE.md §3) and so is kept out of the normal build.
    # Experimental virtual-geometry (meshlet) + its offline asset processor. The
    # processor pulls `metis-sys`, whose vendored C needs the cross-compile
    # workaround in docker/windows/Dockerfile to build for windows-msvc.
    "meshlet", "meshlet_processor",
] }
# Individual Bevy sub-crates that some vendored ecosystem crates depend on
# directly (not via the `bevy` umbrella). Same 0.19 line as `bevy` above so they
# resolve to the one 0.19.x release — preserving a single Bevy across the dlopen
# boundary.
bevy_math = { version = "0.19", default-features = false }
bevy_reflect = { version = "0.19", default-features = false }
bevy_light = { version = "0.19", default-features = false }
bevy_picking = { version = "0.19", default-features = false }
log = "0.4"

[package]
name = "renzora_app"
version = "0.2.0"
edition = "2021"
default-run = "renzora"

[[bin]]
name = "renzora"
path = "src/main.rs"

[features]
# `dynamic_linking` is in the DEFAULT set so every ordinary build — the editor,
# `cargo renzora`, `cargo check`, the `--workspace` dist builds, the dedicated
# server — links the shared `bevy_dylib`/`renzora` dylib and keeps the one frozen
# plugin ABI (`plugin_bevy_hash`). It is a *feature* rather than an inline dep
# flag so the lean release exporter can drop it with `--no-default-features
# --features runtime`, producing a fully static single binary (static Bevy +
# static std, no dylibs) — see `crates/renzora_export` and `[profile.dist-lean]`.
# Dropping it does NOT move the dev/editor ABI: the default build is unchanged.
default = ["runtime", "dynamic_linking"]
# One binary, always runtime-shaped. The editor is no longer a compile-time
# feature: it ships as the `renzora_editor` cdylib loaded at startup
# from beside the exe (Operation Merge). Present → the binary is the editor;
# absent → the same binary is the exported game. The runtime binary is also
# the dedicated server (launch with `--server` to boot headless) and the
# host/listen server (`--host`). No separate editor/server feature or binary.
runtime = ["dep:renzora_runtime", "renzora_runtime/lua"]
# Statically link selected distribution plugins into the binary (lean export
# only). OFF in every normal build — the editor/dev/server builds keep loading
# plugins as dlopen cdylibs. The lean exporter regenerates the
# `renzora_static_plugins` aggregator (whose deps are the plugins a game uses)
# and builds with this feature so they compile in. See `renzora_export::build`.
static_plugins = ["dep:renzora_static_plugins"]
# Shared-`bevy_dylib` dynamic linking. ON by default (above); the lean exporter
# turns it OFF for a static release binary. Mobile/wasm lanes never enable it
# (they build via `--no-default-features --features <wasm|…>` or their own
# crates), so `bevy_dylib` — a dylib-only crate that can't link into an iOS
# staticlib / Android cdylib / wasm — correctly stays out of those builds.
dynamic_linking = ["bevy/dynamic_linking"]
wasm = [
    "runtime",
    "bevy/webgpu",
    "bevy/bevy_asset",
    "bevy/bevy_window",
    "bevy/bevy_winit",
    "bevy/bevy_state",
    "bevy/bevy_log",
    "bevy/bevy_input_focus",
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_scene",
    "bevy/bevy_ui",
    "bevy/bevy_ui_render",
    "bevy/bevy_text",
    "bevy/bevy_picking",
    "bevy/jpeg",
    "bevy/multi_threaded",
    "bevy/async_executor",
]

[dependencies]
# `dynamic_linking` is pulled by the `dynamic_linking` feature (in `default`),
# NOT pinned here — so it can be dropped for a static lean build via
# `--no-default-features`. Feature unification under `--workspace` still
# propagates the default-on feature to every plugin crate's bevy dep, so they
# share one `bevy_dylib` instance and matching TypeIds. Mobile builds
# (`-p renzora-ios` / `-p renzora-android`) don't see this dep and compile bevy
# without dynamic_linking — bevy_dylib stays out of their staticlib/cdylib link.
bevy = { workspace = true }

# Single shared library — `editor` feature on this crate adds editor extras.
renzora_runtime = { path = "crates/renzora_runtime", optional = true }
# Lean-export static-plugin aggregator. Optional + behind `static_plugins`, so
# normal builds never link it; committed empty, regenerated per lean export.
renzora_static_plugins = { path = "crates/renzora_static_plugins", optional = true }
uuid = "1"

# Misc
dynamic_plugin_loader = { path = "crates/dynamic_plugin_loader" }
toml = "0.8"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# WASM support: getrandom needs JS backend on wasm32 targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.108"

[build-dependencies]
winres = "0.1"

[profile.dist]
inherits = "release"
opt-level = 2
strip = "symbols"

# Lean release profile for the single-binary game export. Kept SEPARATE from
# `dist` on purpose: `dist`'s lto/codegen-units feed the frozen plugin ABI hash,
# so they must not change. `dist-lean` is only ever invoked by the lean exporter
# (`--no-default-features --features runtime`, i.e. static Bevy + static std),
# where there is no dylib boundary or ABI to preserve — so we maximise size
# reduction: thin LTO to dead-strip unreachable engine code, size-opt, and full
# symbol strip.
#
# `thin` not `fat` LTO: fat LTO merges the whole program into one giant link unit,
# which on a graph this size made `rust-lld` fail to link the `renzora` dylib;
# thin LTO keeps per-module units (robust + much faster) while still giving most
# of the size win.
#
# NOT `panic = "abort"`: the `renzora` crate is `dylib`+`rlib`, and the dylib
# artifact links the precompiled std's `panic_unwind` runtime, which can't be
# mixed with an `abort` strategy on stable Rust (it would need `-Z build-std` to
# rebuild std). So we keep the default `unwind`; the lost unwind-table savings
# are small next to LTO + strip.
#
# `codegen-units` is left at `dist`'s default (16) — forcing 1 only helped fat
# LTO and slows the build a lot for little size gain under thin LTO.
[profile.dist-lean]
inherits = "dist"
lto = "thin"
opt-level = "s"
strip = "symbols"


[lints]
workspace = true
