[package]
name = "bridge-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridge-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "sync", "time", "macros", "io-util", "process"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.0"
tokio-stream = { version = "0.1", features = ["sync", "time"] }
async-stream = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
notify = "6.1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
semver = "1.0"
zip = "0.6"
tempfile = "3.8"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
