[package]
name = "bridge-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridge-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "sync", "time", "macros", "io-util", "process"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.0"
tokio-stream = { version = "0.1", features = ["sync", "time"] }
async-stream = "0.3"
futures-util = "0.3"
futures = "0.3"
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.13"
base64 = "0.21"
notify = "6.1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
semver = "1.0"
zip = "0.6"
tempfile = "3.8"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2.3"
sysinfo = "0.30"
nvml-wrapper = { version = "0.10", optional = true }
regex = "1.0"
# High-performance concurrent data structures
dashmap = "6.0"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Memory mapping for large files
memmap2 = "0.9"
# UUID with better performance
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
gltf = { version = "1.4", features = ["extras", "names", "utils"] }
gltf-json = "1.4"
image = "0.25"
tobj = "4.0"
easy-gltf = "1.1"
ahash = "0.8"
# Draco compression via external binary
which = "4.4"
tmf = "0.2"

[features]
default = []
nvidia = ["nvml-wrapper"]

[profile.release]
lto = "thin"        # Faster than full LTO with similar benefits
codegen-units = 4   # Better parallelization than 1
panic = "abort"
strip = true
opt-level = 3
overflow-checks = false
