[package]
name = "renzora-server"
version = "0.1.0"
edition = "2021"
description = "Modern WebSocket-first server for the Renzora engine"

[[bin]]
name = "renzora-server"
path = "src/main.rs"

[dependencies]
# Async runtime and networking
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "sync", "time", "macros", "io-util", "process"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
futures-util = "0.3"

# High-performance web framework with WebSocket support
actix-web = { version = "4", features = ["rustls"] }
actix-ws = "0.2"
actix = "0.13"
actix-cors = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
toml = "0.8"

# File watching and system
notify = { version = "6.1", features = ["serde"] }
sysinfo = "0.30"

# Database and caching
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
percent-encoding = "2.3"
regex = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 3D model processing
gltf = { version = "1.4", features = ["extras", "names", "utils"] }
gltf-json = "1.4"
image = "0.25"
tobj = "4.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Performance and utilities
ahash = "0.8"
bytes = "1.0"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.8"
semver = "1.0"
num_cpus = "1.0"

# Optional features
nvml-wrapper = { version = "0.10", optional = true }

[features]
default = []
nvidia = ["nvml-wrapper"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
debug = true
opt-level = 0