[package]
name = "vite-solid-starter"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
cxx-build = "1.0"
cmake = "0.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
vulkano = "0.34"
winit = "0.29"
raw-window-handle = "0.5"
bytemuck = "1.0"
glam = "0.24"
cxx = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
