[workspace]
members = ["crates/avian2d", "crates/avian3d"]
exclude = ["benches"]
resolver = "2"

# Vendored into the Renzora workspace. Bevy comes from the same git v0.19.0 tag
# as the host so avian shares the one `bevy_dylib`; the ecosystem sub-deps are
# the Renzora-vendored copies (already on Bevy 0.19) one level up under crates/.
[workspace.dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", tag = "v0.19.0", default-features = false }
bevy_math = { git = "https://github.com/bevyengine/bevy", tag = "v0.19.0", default-features = false }
bevy_heavy = { path = "../bevy_heavy" }
bevy_transform_interpolation = { path = "../bevy_transform_interpolation" }
glam_matrix_extras = { path = "../glam_matrix_extras" }

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"

[profile.dev]
opt-level = 1 # Use slightly better optimization, so examples work
